Make sure only the right column overflows

--- a/envergo/static/sass/project_haie.scss
+++ b/envergo/static/sass/project_haie.scss
@@ -22,6 +22,7 @@ html.saisie {
     display: none;
   }
 
+  // Make the main part of the app full height
   body {
     display: flex;
     flex-direction: column;
@@ -29,6 +30,7 @@ html.saisie {
 
     main {
       flex: 1;
+      height: 100%;
     }
   }
 }
@@ -42,10 +44,10 @@ div#app {
     flex-wrap: nowrap;
     align-items: stretch;
     min-width: 62em; // size lg
+    position: relative;
 
     #map {
       flex: 1;
-      height: 100%;
 
       div.controls {
         position: absolute;
@@ -121,6 +123,8 @@ div#app {
     }
 
     #sidebar {
+      bottom: 0;
+      overflow-y: scroll;
       min-width: 30em;
       max-width: 40em;
 
@@ -267,6 +271,10 @@ div#app {
           }
         }
       }
+    }
+
+    div.actions {
+      padding: 1.5rem;
     }
   }
 }
